# python-cli-app-template_fork_test

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  compose.yml  pyproject.toml  test2  test3  test_file
.cursor/: mcp.json
.cursor/rules/: main.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation_improvement.yml  feature_request.yml  question.yml  task_chore.yml  technical_improvement.yml
.github/workflows/: ci.yml
.kiro/specs/python-cli-app/: design.md  requirements.md  tasks.md
.serena/: project.yml
ai-rules/: main.md  work-flow.md
docs/: 1st_prompt.md  CONTRIBUTING.md  using-uv-in-docker.md
my-app/: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yml  pyproject.toml
my-app/src/my_app/: __init__.py
my-app/tests/: test_cli.py
src/my_app/: cli.py
tests/: test_cli.py
uv-docker-example-main/: README.md
uv-docker-example-main/.github/workflows/: ci.yaml
