[project]
name = "my-app"
version = "0.1.0"
dependencies = ["typer>=0.9.0"]

[project.scripts]
my-app = "my_app.cli:app"

[project.optional-dependencies]
dev = ["pre-commit", "ruff", "pytest"]

[tool.uv]
package = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
